--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
-import Layout from "../layouts/Layout.astro";
 import Story from "../components/Story.astro";
-import Svg from "../components/Svg.astro";
+import Svg from "../components/Svg/Svg.astro";
+import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Astro">
