--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -36,7 +36,8 @@
       iframe[data-why] {
         display: inline-block;
         border: none;
-        box-shadow: 2.7px 3.2px 3.6px rgba(0, 0, 0, 0.024),
+        box-shadow:
+          2.7px 3.2px 3.6px rgba(0, 0, 0, 0.024),
           7.5px 8.8px 10px rgba(0, 0, 0, 0.035),
           18.1px 21.1px 24.1px rgba(0, 0, 0, 0.046),
           60px 70px 80px rgba(0, 0, 0, 0.07);
