--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -74,8 +74,8 @@ import Svg from "@jasikpark/astro-svg-loader";
 />`}
   >
     <aside style="margin-block-end: 1rem;">
-      We recommend the above pattern over <code>aria-label</code> for screenreader
-      support reasons
+      We recommend the above pattern over <code>aria-label</code> for
+      screenreader support reasons
     </aside>
     <Svg
       aria-label="Astro"
