--- a/src/components/Story.astro
+++ b/src/components/Story.astro
@@ -7,7 +7,7 @@ type Props = {
   source: string;
 };
 
-const { title, source } = Astro.props as Props;
+const { title, source } = Astro.props;
 ---
 
 <div class="Story">
